<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <View
        android:id="@+id/app_bar"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="@dimen/normal_spacing"
        android:layout_marginTop="@dimen/normal_spacing"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/zeyad_abdullah"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_spacing"
        android:layout_marginEnd="@dimen/normal_spacing"
        android:contentDescription="@string/vert_menu"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_spacing"
        android:layout_marginTop="@dimen/normal_spacing"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/round_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_spacing"
        android:text="@string/zeyad_abdullah"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile_photo"
        app:layout_constraintStart_toEndOf="@+id/profile_photo"
        app:layout_constraintTop_toTopOf="@+id/profile_photo" />

    <TextView
        android:id="@+id/last_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/last_seen_recently"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/profile_photo"
        app:layout_constraintStart_toEndOf="@+id/profile_photo"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Info"
                    android:textSize="16sp"
                    android:textColor="@color/grey" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zeyad_abdullah"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/baseline_qr_code_24" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_invite"
                    android:textSize="12sp"
                    android:textColor="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:text="@string/notifications"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:thumbTint="@color/grey"
                        app:trackTint="@color/grey" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"
                    android:textSize="12sp"
                    android:textColor="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/media"
                    android:textColor="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/files"
                    android:textColor="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:text="@string/links"
                    android:textColor="@color/grey" />

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="3"
                android:rowCount="5">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="1dp"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@drawable/zeyad_abdullah" />
            </GridLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>